# RClicker

./: Cargo.toml  README.md
src/: clicker.rs  main.rs
src/support/: clipboard.rs  mod.rs
