[package]
name = "clicker"
version = "0.1.0"
authors = ["NoSequel <nosequel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = { git = "https://github.com/enigo-rs/enigo" }
user32-sys = "0.1.2"
rand = "0.8.0"
