[package]
name = "clicker"
version = "0.1.1"
authors = ["NoSequel <nosequel@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = { git = "https://github.com/enigo-rs/enigo" }
user32-sys = "0.2.0"
rand = "0.8.0"

# imgui
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.1"
glium = { version = "0.29", default-features = true }
clipboard = "0.5"